<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.omarshafei.covid_19tracker.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_world"
        android:name="com.omarshafei.covid_19tracker.ui.world.WorldFragment"
        android:label="@string/title_world"
        tools:layout="@layout/fragment_world" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.omarshafei.covid_19tracker.ui.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_world" />

</navigation>
